--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 <body>
   <div class="container">
     <h1>Image Classification</h1>
-    <input type="file" id="uploadInput" accept="image/*">
+    <input type="file" id="uploadInput" accept="image/*" alt="Upload">
     <div>
       <img id="imagePreview" src="#" alt="Preview">
     </div>
-    <button onclick="classifyImage()">Classify</button>
-    <div id="result"></div>
+    <button onclick="ClassifyWithAlexNet()">Classify with AlexNet</button>
+    <div id="alexnet-result"></div>
+    <button onclick="ClassifyWithResNet()">Classify with ResNet</button>
+    <div id="resnet-result"></div>
+    <button onclick="ClassifyWithMobileNet()">Classify with MobileNet</button>
+    <div id="mobilenet-result"></div>
   </div>
 
   <script>
-    function classifyImage() {
+    function ClassifyWithAlexNet() {
       var fileInput = document.getElementById('uploadInput');
       var file = fileInput.files[0];
       var reader = new FileReader();
@@ -39,14 +43,80 @@
         var formData = new FormData();
         formData.append('image', file);
 
-        fetch('http://127.0.0.1:5000/classify', {
+        fetch('http://127.0.0.1:5000/classify_alexnet', {
           method: 'POST',
           body: formData
         })
         .then(response => response.json())
         .then(data => {
           // Display the classification result
-          var resultDiv = document.getElementById('result');
+          var resultDiv = document.getElementById('alexnet-result');
+          resultDiv.innerHTML = 'The Image is predicted as ' + data.class + ' with ' + data.prob + '% confidence. ' + 'Not for diagnosis, always consult a doctor';
+        })
+        .catch(error => {
+          console.error('Error:', error);
+        });
+      }
+
+      reader.readAsDataURL(file);
+    }
+  </script>
+
+  <script>
+    function ClassifyWithResNet() {
+      var fileInput = document.getElementById('uploadInput');
+      var file = fileInput.files[0];
+      var reader = new FileReader();
+
+      reader.onload = function(e) {
+        var image = document.getElementById('imagePreview');
+        image.src = e.target.result;
+
+        // Send the image to the backend for classification
+        var formData = new FormData();
+        formData.append('image', file);
+
+        fetch('http://127.0.0.1:5000/classify_resnet', {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+          // Display the classification result
+          var resultDiv = document.getElementById('resnet-result');
+          resultDiv.innerHTML = 'The Image is predicted as ' + data.class + ' with ' + data.prob + '% confidence. ' + 'Not for diagnosis, always consult a doctor';
+        })
+        .catch(error => {
+          console.error('Error:', error);
+        });
+      }
+
+      reader.readAsDataURL(file);
+    }
+  </script>
+
+  <script>
+    function ClassifyWithMobileNet() {
+      var fileInput = document.getElementById('uploadInput');
+      var file = fileInput.files[0];
+      var reader = new FileReader();
+
+      reader.onload = function(e) {
+        var image = document.getElementById('imagePreview');
+        image.src = e.target.result;
+
+        // Send the image to the backend for classification
+        var formData = new FormData();
+        formData.append('image', file);
+
+        fetch('http://127.0.0.1:5000/classify_mobilenet', {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+          // Display the classification result
+          var resultDiv = document.getElementById('mobilenet-result');
           resultDiv.innerHTML = 'The Image is predicted as ' + data.class + ' with ' + data.prob + '% confidence. ' + 'Not for diagnosis, always consult a doctor';
         })
         .catch(error => {
